{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Player1",
            "id": "3533d750-a009-4d30-869a-cf905b95327f",
            "actions": [
                {
                    "name": "LeftRight",
                    "type": "PassThrough",
                    "id": "31e2cb8c-189e-4667-a569-a7056902744e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "PassThrough",
                    "id": "4b4520f7-c696-41bf-b2f4-ce2cade538e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "PassThrough",
                    "id": "d03bbe4f-8288-4029-92ad-169958402971",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RecieveDmg",
                    "type": "PassThrough",
                    "id": "5db96c37-d070-4953-8244-342e3c5e18d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "d5ec8297-0a69-4974-b232-5141b2b0bbf8",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6192d117-1ba1-40ea-89b2-174e14e73efa",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bcb3c378-5a29-41a1-9c4b-016b0c018220",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c4755f18-9738-4ead-9d1c-d18cb8ba1818",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23417f0b-395e-42f5-b66c-80fed523c158",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5832fc25-9c8f-4b95-9f79-e2aa67a413bd",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RecieveDmg",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}